defense: more appendix, minor stuff

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -351,6 +351,7 @@
     Title = {A model of prior ignorance for inferences in the one-parameter exponential family},
     Volume = {142},
     Year = {2012},
+    Keywords={defensefurther},
 }
 
 @book{1999:rueger,
