diss: typo in 3.1 intro

--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -26,8 +26,8 @@ the add-on package \texttt{luck} \parencite{luck-package} for the statistical pr
 Finally,
 Section~\ref{sec:isipta11} presents two attempts to further refine inference behaviour in the presence of \pdc.
 While the first approach considers more sophisticated shapes for prior parameter sets,
-the second is a fundamentally different approach that combining inferences from two arbitrary distinct models.
-Interestingly, the inferences from these two approaches in Section~\ref{sec:isipta11} show nevertheless fascinating similarities.
+the second is a fundamentally different approach that, combining inferences from two arbitrary distinct models,
+nevertheless shows fascinating similarities to the first approach.
 
 %football example?
 
