defense: overview and notes

--- a/talk/defense.tex
+++ b/talk/defense.tex
@@ -257,6 +257,68 @@
 \end{tikzpicture}
 }
 
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm, connect spies}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-2.pdf}};
+\spy[red, height=0.55cm] on (1.34,-1.53) in node [fill=white] at (5,-0.4);
+\end{tikzpicture}
+}
+
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm, connect spies}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-2.pdf}};
+\spy[red, height=0.55cm] on (1.34,-1.53) in node [fill=white] at (5,-0.4);
+\spy[red, height=0.55cm] on (1.34,-0.85) in node [fill=white] at (5, 0.3);
+\end{tikzpicture}
+}
+
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-2.pdf}};
+\spy[red, height=0.55cm, connect spies] on (1.34,-1.53) in node [fill=white] at (5,-0.4);
+\spy[red, height=0.55cm, connect spies] on (1.34,-0.85) in node [fill=white] at (5, 0.3);
+\spy[red, height=1.05cm]                on (1.34, 0.78) in node [fill=white] at (5, 1.3);
+\end{tikzpicture}
+}
+
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-2.pdf}};
+\spy[red, height=0.55cm, connect spies] on (1.34,-1.53) in node [fill=white] at (5,-0.4);
+\spy[red, height=0.55cm, connect spies] on (1.34,-0.85) in node [fill=white] at (5, 0.3);
+\spy[red, height=1.05cm]                on (1.34, 0.78) in node [fill=white] at (5, 1.3);
+\spy[red, height=2.45cm]                on (1.34,-2.43) in node [fill=white] at (5,-3.7);
+\end{tikzpicture}
+}
+
 % page 3
 \addtocounter{framenumber}{-1} 
 \frame{\frametitle{Overview}
@@ -268,6 +330,35 @@
 \node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
 %
 \node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-3.pdf}};
+\end{tikzpicture}
+}
+
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-3.pdf}};
+\spy[red, height=2.90cm, connect spies] on (1.34, 0.36) in node [fill=white] at (5,-2.1);
+\end{tikzpicture}
+}
+
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-3.pdf}};
+\spy[red, height=2.90cm, connect spies] on (1.34, 0.36) in node [fill=white] at (5,-2.1);
+\spy[red, height=0.55cm, connect spies] on (1.34,-0.28) in node [fill=white] at (5,-4.0);
 \end{tikzpicture}
 }
 
@@ -285,6 +376,19 @@
 \end{tikzpicture}
 }
 
+\addtocounter{framenumber}{-1} 
+\frame{\frametitle{Overview}
+\begin{tikzpicture}[spy using outlines={rectangle, magnification=3, width=11cm}]
+\path (-1.5,-5) rectangle (10.5,2);
+\node[draw] at (0,0) {\includegraphics[scale=0.12]{../diss-toc-1.pdf}};
+\node[draw] at (3,0) {\includegraphics[scale=0.12]{../diss-toc-2.pdf}};
+\node[draw] at (6,0) {\includegraphics[scale=0.12]{../diss-toc-3.pdf}};
+\node[draw, yellow!60!red, fill=white!60!yellow] at (9,0) {\includegraphics[scale=0.12]{../diss-toc-4.pdf}};
+%
+\node[draw, yellow!60!red, fill=white] at (1.3,-1.5) {\includegraphics[scale=0.225]{../diss-toc-4.pdf}};
+\spy[red, height=0.85cm, connect spies] on (1.34, 0.47) in node [fill=white] at (5,-3.0);
+\end{tikzpicture}
+}
 
 \iffalse
 % ----------------------------------------fast-forward compiling
@@ -390,7 +494,7 @@ in the sampling model for which the observed data is surprising''\\
 \item there are not enough data to overrule the prior
 \end{itemize}
 \end{block}}
-\note<3>[item]{real-world example where \pdc\ is relevant at the end of the talk}
+\note<3>[item]{real-world example where \pdc\ is relevant\\ at the end of the talk}
 }
 
 
@@ -862,8 +966,8 @@ data $s/n = 16/16 = 1$
 \uncover<1->{%
 Favourable inference properties \hyperlink{othermodels-app}{\small (cf.\ other models based on sets of priors)}}
 \begin{itemize}%[<+->]
-\note<1>[item]{In contrast to other model based on sets of priors,
-this model is easy to handle and to elicit, and has very favourable inference properties}
+\note<1>[item]{In contrast to other model based on sets of priors,\\
+this model is easy to handle and to elicit,\\ and has very favourable inference properties}
 \item<1-> $n \to \infty$\hspace*{0.9ex}%
 %\uncover<2->{\then\ \ $\ynr$ values in $\PNc \to \frac{\tau(\x)}{n}$\hspace*{0.9ex}}%
 %\uncover<3->{\then\ \ `Bayesian consistency'}
@@ -871,8 +975,8 @@ this model is easy to handle and to elicit, and has very favourable inference pr
 \uncover<3->{\then\ \ precise inferences}
 \note<3>[item]{`Bayesian consistency' just like in usual Bayesian inference}
 \item<4-> larger $\nzg$ \then\ larger $\PNc$ \then\ more vague inferences
-\note<4>[item]{larger $\nzg$ as compared to $n$:\\
-more weight on imprecise prior $\MZ$ leads to more imprecise posterior $\MN$}
+\note<4>[item]{larger $\nzg$ as compared to $n$:
+more weight on imprecise prior $\MZ$\\ leads to more imprecise posterior $\MN$}
 \item<5-> larger range of $\yzr$ in $\PZc$ \then\ larger range of $\ynr$ in $\PNc$\\ \quad  \then\ more vague inferences
 \note<5>[item]{more imprecise prior $\MZ$ leads to more imprecise $\MN$}
 \end{itemize}
@@ -973,9 +1077,9 @@ trade-off between model complexity and model behaviour
 \note<3>[item]{Reliability of redundant systems}
 \note<3>[item]{Usually 2 -- 4 emergency diesel generators per reactor}
 \note<3>[item]{Sufficient cooling of core if one generator works}
-\note<3>[item]{Reliability through redundancy is jeopardised by common-cause failure:}
-\note<3>[item]{Redundant components may not fail independently: common-cause failure}
-\note<3>[item]{Must include common-cause failures in overall system reliability analysis}
+\note<3>[item]{Redundant components may not fail independently:\\ common-cause failure}
+\note<3>[item]{(Reliability through redundancy is jeopardised)}
+\note<3>[item]{Must include common-cause failures\\ in overall system reliability analysis}
 }
 
 \frame{
@@ -996,8 +1100,8 @@ Right: Wikimedia Commons,\\[-1.8ex]
 \url{http://commons.wikimedia.org/wiki/File:Graphic_TMI-2_Core_End-State_Configuration.png}
 \end{tiny}
 % Notes for the slide
-\note<1>[item]{Lesson learned at another accident: Three Mile Island (1979) where also a meltdown happened (right)}
-\note<1>[item]{Most popular model: \emph{basic parameter model}, we will look at a parameterisation of it called\ldots}
+\note<1>[item]{Lesson learned at another accident:\\ Three Mile Island (1979) where also a meltdown happened (right)}
+\note<1>[item]{Most popular model: \emph{basic parameter model},\\ we will look at a parameterisation of it called\ldots}
 }
 
 \subsection{Alpha-Factor Model}
@@ -1025,7 +1129,7 @@ Right: Wikimedia Commons,\\[-1.8ex]
     \end{itemize}
   \end{block}
   (the model actually serves to estimate failure \emph{rates},\\ but the above is all what matters in this talk)
-\note<1>[item]{Slide on inferences in alph-factor model commented out}
+\note<1>[item]{Slide on inferences in alpha-factor model commented out}
 \end{frame}
 
 \iffalse
@@ -1321,7 +1425,7 @@ Analyst has to specify (`elicit') \\
 \note<2>[item]{choice of bounds for $\nzg$ is not so straight-forward,
 so we took advice from Good and reason about posterior expectations for hypothetical data,
 also known as pre-posterior analysis}
-\note<3>[item]{These rules are a bit difficult to grasp at first, so I'll explain them with the example:}
+\note<3>[item]{These rules are a bit difficult to grasp at first,\\ so I'll explain them with the example:}
 \end{frame}
 
 \begin{frame}{Imprecise Dirichlet Model: Elicitation}
@@ -1445,7 +1549,7 @@ anticipating \emph{anything} that may happen.)
 \item Walley's (1991) framework for coherent inference using imprecise probabilities
 instead allows for incomplete and imprecise prior specifications.
 %\item It properly reflects the knowledge base ***
-\note<1>[item]{The unattainable precision required by usual Bayesian inference is thus unnecessary (even as an ideal).}
+\note<1>[item]{The unattainable precision required by usual Bayesian inference\\ is thus unnecessary (even as an ideal).}
 \begin{itemize}
 \item more realistic description of uncertainties that are often hidden by spuriously precise models (through arbitrary modeling decisions)
 \item `overprecision' is often compensated %in statistical practice
